# ecpoint-python

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: calibration.md  configuration.md  contributing.md  installation.md  pipeline.md  usage.md
src/ecpoint/: __init__.py  ecpoint.py
tests/: __init__.py  conftest.py  test_calibration.py  test_config.py  test_filesystem.py  test_grib_utils.py  test_percentiles.py  test_point_mode.py  test_postprocess.py  test_predict.py  test_validation.py
